Ensure buttonGroups are properly aligned on mobile

--- a/docusaurus/src/scss/code-block.scss
+++ b/docusaurus/src/scss/code-block.scss
@@ -370,7 +370,7 @@ pre.prism-code {
   [class*="buttonGroup"],
   .ai-button-group {
     right: auto;
-    left: 0;
+    left: 16px;
   }
 
   [class*="codeBlockTitle"] {
